output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_1487.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_1487.py", line 185
    /* else: pos[0]==9 */ durations[9])))))))))
    ^
SyntaxError: invalid syntax
